add two missing pages to the preliminary static menue

--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,7 @@
 
     <ul>
         <li><a href="http://staging.lumiera.org/project/screenshots.html" target="_top"> Screenshots </a></li>
+        <li><a href="http://staging.lumiera.org/project/faq.html" target="_top"> FAQ </a></li>
         <li><a href="http://staging.lumiera.org/project/press.html" target="_top"> Press </a></li>
         <li><a href="http://staging.lumiera.org/project/donate.html" target="_top"> Donate </a></li>
         <li><a href="http://issues.lumiera.org/roadmap" target="_top"> Roadmap </a></li>
@@ -27,6 +28,7 @@
     </ul>
     <li><a href="http://staging.lumiera.org/documentation/index.html" class="nav" target="_top">Documentation</a>
     <ul>
+        <li><a href="http://staging.lumiera.org/documentation/user/index.html" target="_top">User documentation</a></li>
         <li><a href="http://staging.lumiera.org/documentation/media/index.html" target="_top"> Media </a></li>
 
         <li><a href="http://staging.lumiera.org/documentation/technical/index.html" target="_top"> Technical </a></li>
